--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "\"# -Realtime-Chat-App-with-React-Node.js-Socket.io\"",
   "main": "index.js",
+  "engines":{
+    "node":">=20.0.0"
+  },
   "scripts": {
 	"build":"npm install --prefix backend && npm install --prefix fontend && npm run build --prefix frontend",
     "start": "npm run start --prefix backend"
