--- a/backend/package.json
+++ b/backend/package.json
@@ -3,21 +3,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-	"dev": "nodemon src/server.js",
+    "dev": "nodemon src/server.js",
     "start": "node src/server.js"
-	},
-	"keywords": [],
-	"type": "module",
+  },
+  "keywords": [],
+  "type": "module",
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.1.0",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.1"
+    "mongoose": "^8.10.1",
+    "resend": "^6.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
